# productor_consumidor

./: CMakeLists.txt  a.out
headers/: controller.h  entityManager.h
src/: controller.cpp  cursor.cpp  entityManager.cpp  kbhitLinux.cpp  main.cpp
